--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,5 +24,18 @@ a {
 }
 
 @tailwind base;
+h1 {
+  font-size: 1.4em;
+  font-weight: 700;
+  margin: 0;
+}
+
+p {
+  font-weight: 400;
+  line-height: 15px;
+  margin: 0;
+  margin-bottom: 4px;
+}
+
 @tailwind components;
 @tailwind utilities;
