--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,7 @@ body {
 #__next {
   height: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .container {
@@ -42,11 +43,22 @@ h1 {
   margin: 0;
 }
 
+h2 {
+  font-size: 1em;
+  font-weight: 700;
+  margin: 0;
+}
+
 p {
   font-weight: 400;
   line-height: 15px;
   margin: 0;
   margin-bottom: 4px;
+}
+
+.sub-p {
+  font-weight: 400;
+  font-size: 0.75em;
 }
 
 @tailwind components;
