--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ body {
   font-family: "Montserrat", sans-serif;
   color: #1e1e1e;
   font-weight: 500;
+  font-size: 16px;
   position: relative;
 
   -webkit-user-select: none;
@@ -38,27 +39,28 @@ a {
 
 @tailwind base;
 h1 {
-  font-size: 1.4em;
+  font-size: 20px;
   font-weight: 700;
   margin: 0;
 }
 
 h2 {
-  font-size: 1em;
+  font-size: 16px;
   font-weight: 700;
   margin: 0;
 }
 
 p {
   font-weight: 400;
+  font-size: 16px;
   line-height: 15px;
   margin: 0;
   margin-bottom: 4px;
 }
 
-.sub-p {
+.small-font {
   font-weight: 400;
-  font-size: 0.75em;
+  font-size: 14px;
 }
 
 @tailwind components;
